Fix overflow

--- a/pages/blog/[slug].module.scss
+++ b/pages/blog/[slug].module.scss
@@ -77,6 +77,7 @@
 .content_article {
   width: 100%;
   max-width: 650px;
+  overflow-x: auto;
 }
 
 .content_article_deck {
